--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <label for="menu-bar" class="fa fa-bars"></label>
         
         <nav class="navbar">
-            <a href="/acercade.html">acerca de</a>
-            <a href="/contactame.html">contactame</a>
+            <a href="acercade.html">acerca de</a>
+            <a href="contactame.html">contactame</a>
         </nav>
 
     </header>
@@ -27,7 +27,7 @@
         <div class="content">
            <h3>This is web 50 <span>mi pagina web</span></h3> 
            <p>Esta es mi primera pagina web dentro del Web50 estoy muy emocionado por la cosas que he aprendido, me he divertido muchisimo apuesto que seguire aprendiendo mucho mas:)</p>
-           <a href="/detalles.html" class="btn">mas detalles</a>
+           <a href="detalles.html" class="btn">mas detalles</a>
 
         </div>
 
