por fin funciona en github

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bienvenido a mi pagina web, esto es project0</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../-cs50w-project0-/estilo.css">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="image">
-            <img src="img/4.png" alt="">
+            <img src="../-cs50w-project0-/project0/img/4.png" alt="">
         </div>
 
     </section>
