--- a/contactame.html
+++ b/contactame.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contantame</title>
-    <link rel="stylesheet" href="/anidamiento.css">
+    <link rel="stylesheet" href="../-cs50w-project0-/anidamiento.css">
 </head>
 <body>
     <div><p>si quieres contactarme te dejo una lista con los siguientes metodos, por cierto esta pagina es un claro ejemplo de anidamiento con sas jajajaja valla lo he dicho!!!</p>
